Add Delete Customer to gRPC/REST adapter
