# service/customer/infrastructure/primary/grpc/customer.pb.go
@@ -214,41 +214,83 @@ func (m *ChangeEmailAddressRequest) GetEmailAddress() string {
 	return ""
 }
 
+type DeleteRequest struct {
+	Id                   string   `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *DeleteRequest) Reset()         { *m = DeleteRequest{} }
+func (m *DeleteRequest) String() string { return proto.CompactTextString(m) }
+func (*DeleteRequest) ProtoMessage()    {}
+func (*DeleteRequest) Descriptor() ([]byte, []int) {
+	return fileDescriptor_9efa92dae3d6ec46, []int{4}
+}
+
+func (m *DeleteRequest) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_DeleteRequest.Unmarshal(m, b)
+}
+func (m *DeleteRequest) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_DeleteRequest.Marshal(b, m, deterministic)
+}
+func (m *DeleteRequest) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_DeleteRequest.Merge(m, src)
+}
+func (m *DeleteRequest) XXX_Size() int {
+	return xxx_messageInfo_DeleteRequest.Size(m)
+}
+func (m *DeleteRequest) XXX_DiscardUnknown() {
+	xxx_messageInfo_DeleteRequest.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_DeleteRequest proto.InternalMessageInfo
+
+func (m *DeleteRequest) GetId() string {
+	if m != nil {
+		return m.Id
+	}
+	return ""
+}
+
 func init() {
 	proto.RegisterType((*RegisterRequest)(nil), "customergrpc.RegisterRequest")
 	proto.RegisterType((*RegisterResponse)(nil), "customergrpc.RegisterResponse")
 	proto.RegisterType((*ConfirmEmailAddressRequest)(nil), "customergrpc.ConfirmEmailAddressRequest")
 	proto.RegisterType((*ChangeEmailAddressRequest)(nil), "customergrpc.ChangeEmailAddressRequest")
+	proto.RegisterType((*DeleteRequest)(nil), "customergrpc.DeleteRequest")
 }
 
 func init() { proto.RegisterFile("customer.proto", fileDescriptor_9efa92dae3d6ec46) }
 
 var fileDescriptor_9efa92dae3d6ec46 = []byte{
-	// 375 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x8c, 0x92, 0xc1, 0x4a, 0xeb, 0x40,
-	0x14, 0x86, 0x49, 0x2e, 0x5c, 0xda, 0x43, 0xe9, 0xed, 0x9d, 0x0b, 0xd7, 0x3a, 0xd6, 0x22, 0x23,
-	0x68, 0xad, 0x90, 0xa1, 0xba, 0xeb, 0x4e, 0x4a, 0xc1, 0x95, 0x42, 0x57, 0x6e, 0xa7, 0xcd, 0x34,
-	0x1d, 0x68, 0x66, 0x62, 0x66, 0x5a, 0x28, 0x22, 0x88, 0x4b, 0xb7, 0x3e, 0x9a, 0xaf, 0xe0, 0x73,
-	0x88, 0x74, 0x92, 0xd0, 0x34, 0x35, 0xe2, 0x32, 0xe7, 0x3f, 0x39, 0xff, 0x7f, 0xbe, 0x39, 0x50,
-	0x9f, 0x2c, 0xb4, 0x51, 0x21, 0x8f, 0xbd, 0x28, 0x56, 0x46, 0xa1, 0x5a, 0xf6, 0x1d, 0xc4, 0xd1,
-	0x04, 0x1f, 0x04, 0x4a, 0x05, 0x73, 0x4e, 0xad, 0x36, 0x5e, 0x4c, 0x29, 0x0f, 0x23, 0xb3, 0x4a,
-	0x5a, 0x71, 0x2b, 0x15, 0x59, 0x24, 0x28, 0x93, 0x52, 0x19, 0x66, 0x84, 0x92, 0x3a, 0x51, 0x89,
-	0x86, 0x3f, 0x23, 0x1e, 0x08, 0x6d, 0x78, 0x3c, 0xe2, 0xf7, 0x0b, 0xae, 0x0d, 0x22, 0x50, 0xe3,
-	0x21, 0x13, 0xf3, 0x2b, 0xdf, 0x8f, 0xb9, 0xd6, 0x4d, 0xe7, 0xc8, 0xe9, 0x54, 0x47, 0x5b, 0x35,
-	0xd4, 0x82, 0x6a, 0x20, 0x96, 0x5c, 0xde, 0xb0, 0x90, 0x37, 0x5d, 0xdb, 0xb0, 0x29, 0xa0, 0x36,
-	0xc0, 0x94, 0x85, 0x62, 0xbe, 0xb2, 0xf2, 0x2f, 0x2b, 0xe7, 0x2a, 0x84, 0x40, 0x63, 0x63, 0xaa,
-	0x23, 0x25, 0x35, 0x47, 0x75, 0x70, 0x85, 0x9f, 0x7a, 0xb9, 0xc2, 0x27, 0x77, 0x80, 0x07, 0x4a,
-	0x4e, 0x45, 0x1c, 0x0e, 0x73, 0xc6, 0x59, 0xc6, 0x42, 0x37, 0xea, 0x42, 0x63, 0x92, 0x74, 0xdb,
-	0xed, 0xae, 0x99, 0x9e, 0xa5, 0xb1, 0x76, 0xea, 0xe4, 0x16, 0xf6, 0x07, 0x33, 0x26, 0x03, 0xfe,
-	0x93, 0xc1, 0x45, 0x18, 0xee, 0x2e, 0x8c, 0x8b, 0x0f, 0x17, 0x2a, 0x83, 0xf4, 0x3d, 0xd0, 0x18,
-	0x2a, 0xd9, 0x6e, 0xe8, 0xd0, 0xcb, 0x3f, 0x93, 0x57, 0x00, 0x8d, 0xdb, 0x65, 0x72, 0x82, 0x84,
-	0xec, 0x3d, 0xbf, 0xbd, 0xbf, 0xba, 0x7f, 0x49, 0x8d, 0x2e, 0x7b, 0x34, 0x6b, 0xed, 0x3b, 0x5d,
-	0xf4, 0xe2, 0xc0, 0xbf, 0x2f, 0xe0, 0xa0, 0xce, 0xf6, 0xc0, 0x72, 0x7e, 0xf8, 0xbf, 0x97, 0x5c,
-	0x85, 0x97, 0x9d, 0x8c, 0x37, 0x5c, 0x9f, 0x0c, 0xe9, 0x59, 0xcb, 0x73, 0x7c, 0x92, 0xb7, 0xa4,
-	0x0f, 0xc2, 0x7f, 0xa4, 0x76, 0x65, 0x96, 0x8c, 0xa1, 0x29, 0xd4, 0x75, 0x98, 0x27, 0x07, 0xd0,
-	0x2e, 0x4f, 0x74, 0x5a, 0xc8, 0x52, 0x46, 0xbc, 0x34, 0xca, 0x99, 0x8d, 0x72, 0x8c, 0xdb, 0xdf,
-	0x47, 0xe9, 0x3b, 0xdd, 0xf1, 0x6f, 0xfb, 0xeb, 0xe5, 0x67, 0x00, 0x00, 0x00, 0xff, 0xff, 0xd5,
-	0xcd, 0xed, 0x1a, 0x26, 0x03, 0x00, 0x00,
+	// 402 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x8c, 0x52, 0x4f, 0xeb, 0xd3, 0x40,
+	0x14, 0x24, 0xf9, 0x41, 0x69, 0x1f, 0xb5, 0xb6, 0x5b, 0xd0, 0x36, 0xad, 0x55, 0x56, 0xd0, 0x5a,
+	0x21, 0x4b, 0xf5, 0xe6, 0x4d, 0x6a, 0xc1, 0x93, 0x42, 0x4f, 0xbd, 0x6e, 0x9b, 0xd7, 0x74, 0x21,
+	0xc9, 0xc6, 0xec, 0xb6, 0x50, 0x44, 0x10, 0x8f, 0x5e, 0xfd, 0x68, 0x5e, 0xfc, 0x00, 0x7e, 0x10,
+	0xe9, 0x26, 0xa1, 0xf9, 0x63, 0xc4, 0xe3, 0xbe, 0x19, 0xde, 0xcc, 0xce, 0x3c, 0xe8, 0xed, 0x4f,
+	0x4a, 0xcb, 0x10, 0x13, 0x37, 0x4e, 0xa4, 0x96, 0xa4, 0x9b, 0xbf, 0xfd, 0x24, 0xde, 0x3b, 0x13,
+	0x5f, 0x4a, 0x3f, 0x40, 0x66, 0xb0, 0xdd, 0xe9, 0xc0, 0x30, 0x8c, 0xf5, 0x25, 0xa5, 0x3a, 0xd3,
+	0x0c, 0xe4, 0xb1, 0x60, 0x3c, 0x8a, 0xa4, 0xe6, 0x5a, 0xc8, 0x48, 0xa5, 0x28, 0x55, 0x70, 0x7f,
+	0x83, 0xbe, 0x50, 0x1a, 0x93, 0x0d, 0x7e, 0x3a, 0xa1, 0xd2, 0x84, 0x42, 0x17, 0x43, 0x2e, 0x82,
+	0xb7, 0x9e, 0x97, 0xa0, 0x52, 0x23, 0xeb, 0x89, 0x35, 0xef, 0x6c, 0x4a, 0x33, 0x32, 0x85, 0x8e,
+	0x2f, 0xce, 0x18, 0x7d, 0xe0, 0x21, 0x8e, 0x6c, 0x43, 0xb8, 0x0d, 0xc8, 0x0c, 0xe0, 0xc0, 0x43,
+	0x11, 0x5c, 0x0c, 0x7c, 0x67, 0xe0, 0xc2, 0x84, 0x52, 0xe8, 0xdf, 0x44, 0x55, 0x2c, 0x23, 0x85,
+	0xa4, 0x07, 0xb6, 0xf0, 0x32, 0x2d, 0x5b, 0x78, 0x74, 0x0b, 0xce, 0x4a, 0x46, 0x07, 0x91, 0x84,
+	0xeb, 0x82, 0x70, 0xee, 0xb1, 0xc2, 0x26, 0x0b, 0xe8, 0xef, 0x53, 0xb6, 0xf9, 0xdd, 0x7b, 0xae,
+	0x8e, 0x99, 0xad, 0xda, 0x9c, 0x7e, 0x84, 0xf1, 0xea, 0xc8, 0x23, 0x1f, 0xff, 0x67, 0x71, 0x35,
+	0x0c, 0xbb, 0x1e, 0x06, 0x7d, 0x0c, 0xf7, 0xde, 0x61, 0x80, 0x1a, 0x1b, 0x96, 0xbc, 0xfa, 0x75,
+	0x07, 0xed, 0x55, 0x56, 0x18, 0xd9, 0x41, 0x3b, 0xff, 0x3c, 0x79, 0xe4, 0x16, 0x7b, 0x74, 0x2b,
+	0x4d, 0x38, 0xb3, 0x26, 0x38, 0xcd, 0x8c, 0x3e, 0xfc, 0xf6, 0xf3, 0xf7, 0x0f, 0x7b, 0x40, 0xbb,
+	0xec, 0xbc, 0x64, 0x39, 0xf5, 0x8d, 0xb5, 0x20, 0xdf, 0x2d, 0x18, 0xfe, 0x25, 0x3d, 0x32, 0x2f,
+	0x2f, 0x6c, 0x0e, 0xd8, 0x79, 0xe0, 0xa6, 0x67, 0xe3, 0xe6, 0x37, 0xe5, 0xae, 0xaf, 0x37, 0x45,
+	0x97, 0x46, 0xf2, 0xa5, 0xf3, 0xac, 0x28, 0xc9, 0x3e, 0x0b, 0xef, 0x0b, 0x33, 0x99, 0xf0, 0x74,
+	0x0d, 0xcb, 0x52, 0xbf, 0x9a, 0xf9, 0x6a, 0x01, 0xa9, 0x07, 0x4e, 0x9e, 0x57, 0xbc, 0x34, 0x55,
+	0xd2, 0x68, 0xe5, 0x85, 0xb1, 0xf2, 0xd4, 0x99, 0xfd, 0xdb, 0xca, 0xd5, 0xc2, 0x16, 0x5a, 0x69,
+	0x43, 0x64, 0x52, 0x56, 0x2d, 0xf5, 0xd6, 0xa8, 0x34, 0x36, 0x4a, 0xc3, 0xc5, 0xa0, 0xa6, 0xb4,
+	0x6b, 0x19, 0xea, 0xeb, 0x3f, 0x01, 0x00, 0x00, 0xff, 0xff, 0xe5, 0x25, 0x35, 0xc3, 0xa1, 0x03,
+	0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -266,6 +308,7 @@ type CustomerClient interface {
 	Register(ctx context.Context, in *RegisterRequest, opts ...grpc.CallOption) (*RegisterResponse, error)
 	ConfirmEmailAddress(ctx context.Context, in *ConfirmEmailAddressRequest, opts ...grpc.CallOption) (*empty.Empty, error)
 	ChangeEmailAddress(ctx context.Context, in *ChangeEmailAddressRequest, opts ...grpc.CallOption) (*empty.Empty, error)
+	Delete(ctx context.Context, in *DeleteRequest, opts ...grpc.CallOption) (*empty.Empty, error)
 }
 
 type customerClient struct {
@@ -303,11 +346,21 @@ func (c *customerClient) ChangeEmailAddress(ctx context.Context, in *ChangeEmail
 	return out, nil
 }
 
+func (c *customerClient) Delete(ctx context.Context, in *DeleteRequest, opts ...grpc.CallOption) (*empty.Empty, error) {
+	out := new(empty.Empty)
+	err := c.cc.Invoke(ctx, "/customergrpc.Customer/Delete", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // CustomerServer is the server API for Customer service.
 type CustomerServer interface {
 	Register(context.Context, *RegisterRequest) (*RegisterResponse, error)
 	ConfirmEmailAddress(context.Context, *ConfirmEmailAddressRequest) (*empty.Empty, error)
 	ChangeEmailAddress(context.Context, *ChangeEmailAddressRequest) (*empty.Empty, error)
+	Delete(context.Context, *DeleteRequest) (*empty.Empty, error)
 }
 
 // UnimplementedCustomerServer can be embedded to have forward compatible implementations.
@@ -322,6 +375,9 @@ func (*UnimplementedCustomerServer) ConfirmEmailAddress(ctx context.Context, req
 }
 func (*UnimplementedCustomerServer) ChangeEmailAddress(ctx context.Context, req *ChangeEmailAddressRequest) (*empty.Empty, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method ChangeEmailAddress not implemented")
+}
+func (*UnimplementedCustomerServer) Delete(ctx context.Context, req *DeleteRequest) (*empty.Empty, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method Delete not implemented")
 }
 
 func RegisterCustomerServer(s *grpc.Server, srv CustomerServer) {
@@ -382,6 +438,24 @@ func _Customer_ChangeEmailAddress_Handler(srv interface{}, ctx context.Context, 
 	return interceptor(ctx, in, info, handler)
 }
 
+func _Customer_Delete_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(DeleteRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(CustomerServer).Delete(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/customergrpc.Customer/Delete",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(CustomerServer).Delete(ctx, req.(*DeleteRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 var _Customer_serviceDesc = grpc.ServiceDesc{
 	ServiceName: "customergrpc.Customer",
 	HandlerType: (*CustomerServer)(nil),
@@ -397,6 +471,10 @@ var _Customer_serviceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "ChangeEmailAddress",
 			Handler:    _Customer_ChangeEmailAddress_Handler,
+		},
+		{
+			MethodName: "Delete",
+			Handler:    _Customer_Delete_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
